# pool-allocator

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  allocator.cpp  allocator.h
tests/: CMakeLists.txt  test.cpp
